added css, created two columns and styled header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
+.quotesDisplay {
+
+}
+
+.getQuotes {
+  width: fit-content;
+  justify-content: center;
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* Adjust the number of columns as needed */
@@ -8,3 +17,7 @@
     background-color: #f1c5c5; /* Adjust the background color as needed */
     padding: 10px; /* Adjust the padding as needed */
   }
+
+.box {
+  width:fit-content;
+}
