--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,3 +15,14 @@
     background-color: #f1c5c5; /* Adjust the background color as needed */
     padding: 10px; /* Adjust the padding as needed */
   }
+
+  #containResults {
+    width: 150px;
+    height: 150px;
+  }
+  
+  #containResults > .results{
+    object-fit:fill;
+    width: 100%;
+    height: 100%;
+  }
