added button css classes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,11 +21,13 @@
   height: 100%;
 }
 
+.previous-button {
+  display: block;
+}
 
 #title-placeholder {
   margin: 10%;
 }
-
 
   #containResults {
     width: 150px;
